force-app/main/default/objects/Time_Log__c/Time_Log__c.object-meta.xml
<CustomObject>
    <label>Time Log</label>
    <nameField>
        <displayFormat>TimeLog-{0000}</displayFormat>
        <label>Time Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>