force-app/main/default/objects/Time_Log__c/fields/Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged__c</fullName>
    <formula>CASE(Time__c, 
&quot;15 Minutes&quot;, 0.25,
&quot;30 Minutes&quot;, 0.5,
&quot;45 Minutes&quot;, 0.75,
&quot;1 Hour&quot; , 1,
&quot;2 Hours&quot;, 2,
&quot;3 Hours&quot; , 3,
&quot;4 Hours&quot;, 4,
&quot;5 Hours&quot; , 5,
&quot;6 Hours&quot;, 6,
&quot;7 Hours&quot; , 7,
&quot;8 Hours&quot;, 8,
&quot;9 Hours&quot; , 9,
&quot;10 Hours&quot;, 10,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>