force-app/main/default/objects/Time_Log__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time spent on the work item</description>
    <inlineHelpText>Time spent on the work item</inlineHelpText>
    <label>Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>45 Minutes</fullName>
            </value>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>3 Hours</fullName>
            </value>
            <value>
                <fullName>4 Hours</fullName>
            </value>
            <value>
                <fullName>5 Hours</fullName>
            </value>
            <value>
                <fullName>6 Hours</fullName>
            </value>
            <value>
                <fullName>7 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
            <value>
                <fullName>9 Hours</fullName>
            </value>
            <value>
                <fullName>10 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>