force-app/main/default/objects/Time_Log__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <label>Work Item</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Time_Track</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>